style: 전반적인 퍼블리싱 완료

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Myeongjo:wght@400;700;800&family=Noto+Sans+KR:wght@300;500;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="#" />
+
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="읽은 책들을 추가해보세요!" />
     <title>Library</title>
