docs: 메타태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,21 @@
     />
     <link rel="shortcut icon" href="#" />
 
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://ourlibrary.s3-website.ap-northeast-2.amazonaws.com/" />
+    <meta property="og:site_name" content="우리의 도서관" />
+    <meta property="og:local" content="ko_KO" />
+
+    <meta property="og:title" content="우리의 도서관" />
+    <meta property="og:dscription" content="책을 공유하는 소소한 즐거움을 느껴보세요!" />
+    <meta
+      property="og:image"
+      content="https://preview.redd.it/reblpesb3by41.jpg?auto=webp&s=5cc8c1a006286c7bf7f1c1c7ef97f0f0f59a9720"
+    />
+
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="읽은 책들을 추가해보세요!" />
-    <title>Library</title>
+    <meta name="description" content="책을 공유하는 소소한 즐거움을 느껴보세요!" />
+    <title>우리의 도서관</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
